--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
+.vscode
 **/node_modules
-**/.vscode
+**/.DS_Store
+**/build
+**/.env
+**/.env-docker*
+**/.env-test
+**/env
+**/venv
+**/dist
+**/latestBuild.zip
+**/cache
+**/*.wav
+**/*.pyc
+
+**/clip*
+**/Clip*
+**/upload*
+**/temp
+**/manualFiles
+**/__pycache__
+**/.pytest_cache
+server/src/oapi
+**/input
