--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
-.vscode
-**/node_modules
-**/.DS_Store
-**/build
-**/.env
-**/.env-docker*
-**/.env-test
-**/env
-**/venv
-**/dist
-**/latestBuild.zip
-**/cache
-**/*.wav
-**/*.pyc
+# Dependencies
+/node_modules
 
-**/clip*
-**/Clip*
-**/upload*
-**/temp
-**/manualFiles
-**/__pycache__
-**/.pytest_cache
-server/src/oapi
-**/input
+# Production
+/build
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.env
