--- a/package.json
+++ b/package.json
@@ -1,23 +1,54 @@
 {
-  "name": "michaelosbornegit.github.io",
+  "name": "mikeys-world",
   "version": "0.0.0",
-  "homepage": "https://michaelosbornegit.github.io",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d docs/dist",
-    "dev": "vocs dev --port 3000 --host",
-    "build": "vocs build",
-    "preview": "vocs preview"
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "dotenv -- docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@types/react": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "typescript": "latest",
-    "vocs": "latest"
+    "@docusaurus/core": "3.3.2",
+    "@docusaurus/plugin-google-gtag": "^3.3.2",
+    "@docusaurus/preset-classic": "3.3.2",
+    "@frank-mayer/react-tag-cloud": "^1.2.1",
+    "@mdx-js/react": "^3.0.0",
+    "clsx": "^2.0.0",
+    "docusaurus-plugin-image-zoom": "^2.0.0",
+    "dotenv": "^16.4.5",
+    "medium-zoom": "^1.1.0",
+    "prism-react-renderer": "^2.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@docusaurus/module-type-aliases": "3.3.2",
+    "@docusaurus/tsconfig": "3.3.2",
+    "@docusaurus/types": "3.3.2",
+    "dotenv-cli": "^7.4.2",
+    "typescript": "~5.2.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 5 safari version"
+    ]
+  },
+  "engines": {
+    "node": ">=18.0"
   }
 }
